--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 .btn:disabled {
-	background: #a5a5a5;
+	background-color: #a5a5a5;
 	cursor: not-allowed;
 }
 
@@ -94,7 +94,7 @@ body {
 	width: 100%;
 	border: 1px solid #a5a5a5;
 	height: 120px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	padding: 10px;
 	border-radius: 5px;
 	font-size: 18px;
@@ -123,4 +123,12 @@ body {
 	align-items: center;
 	justify-content: center;
 	gap: 5px;
+}
+
+#language {
+	font-size: 16px;
+}
+
+.record {
+	background-color: #38419D;
 }
