--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 }
 
 .container .header {
+	margin-top: 15px;
 	font-size: 22px;
 	text-align: center;
 	font-weight: bold;
@@ -97,7 +98,7 @@ body {
 	overflow-y: auto;
 	padding: 10px;
 	border-radius: 5px;
-	font-size: 18px;
+	font-size: 16px;
 	margin: 10px 0 20px;
 	color: #333;
 	font-weight: 500;
